--- a/index.html
+++ b/index.html
@@ -281,16 +281,71 @@
     <!-- /#site_main -->
 
     <footer id="site_footer" class="flex">
-        <div class="footer_section">
-            
-        </div>
-        <div class="footer_section">
-            
-        </div>
-        <div class="footer_section">
-            <div class="end">
-                End meeting
+        <div class="footer_section flex">
+            <div class="box flex">
+                <div class="element">
+                    <i class="fa-solid fa-microphone"></i>
+                    <p>Mute</p>
+                </div>
+                <i class="fa-solid fa-angle-up"></i>
             </div>
+            <div class="box flex">
+                <div class="element">
+                    <i class="fa-solid fa-video"></i>
+                    <p>Stop video</p>
+                </div>
+                <i class="fa-solid fa-angle-up"></i>
+            </div>
+        </div>
+        <div class="footer_section flex">
+            <div class="box flex marginL">
+                <div class="element">
+                    <i class="fa-solid fa-user-plus"></i>
+                    <p>Invite</p>
+                </div>
+            </div>
+            <div class="box flex marginL">
+                <div class="element">
+                    <i class="fa-solid fa-user-group"></i>
+                    <p>Manage Participants</p>
+                </div>
+            </div>
+            <div class="box flex marginL">
+                <div class="element">
+                    <i class="fa-solid fa-square-poll-vertical"></i>                    <p>Polling</p>
+                </div>
+            </div>
+            <div class="box flex marginL">
+                <div class="element">
+                    <i class="fa-solid fa-share-from-square green"></i>                    <p>Share Screen</p>
+                </div>
+                <i class="fa-solid fa-angle-up"></i>
+            </div>
+            <div class="box flex marginL">
+                <div class="element">
+                    <i class="fa-solid fa-comment"></i>                    
+                    <p>Chat</p>
+                </div>
+            </div>
+            <div class="box flex marginL">
+                <div class="element">
+                    <i class="fa-solid fa-record-vinyl"></i>                    <p>Record</p>
+                </div>
+            </div>
+            <div class="box flex marginL">
+                <div class="element">
+                    <i class="fa-solid fa-table-cells-large"></i>                    <p>Breakout Rooms</p>
+                </div>
+            </div>
+            <div class="box flex">
+                <div class="element">
+                    <i class="fa-solid fa-ellipsis"></i>                  
+                    <p>More</p>
+                </div>
+            </div>
+        </div>
+        <div class="end">
+            End Meeting
         </div>
     </footer>
     <!-- /#site_footer -->
